refactor(CarCollection): Implement and test CarCollection
자동차 경주에 참가한 자동차 목록의 데이터와 상태를 관리하는 CarCollection 객체를 구현한다.
목록 내 전체 자동차의 상태를 출력할 수 있도록 toString을 override 한다.
외부에서 CarCollection.cars 데이터를 수정할 수 없는 First Class Collection을 보장한다.

BREAKING CHANGE: CarRacingTest는 현재 정상 동작하지 않는다.
	CarRacing.carList 대신 CarCollection을 사용해야 한다.